# cicd-test

./: Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
app/: main.py
